src/test/deca/codegen/valid/cast-trueByInstanceOf.deca
class A{
}

class B extends A{
}

{
	Object o = new B();
	if(o instanceof A) {
		println("normal");
	}
	(A)(o);
}
