src/test/deca/codegen/invalid/cast-errorByInstanceOf.deca
class A {}
class B extends A{}

{
	Object o = new A();
	(B)(o);
}
